Add ContextMenu and ToastManager for enhanced UI interactions